[tool.poetry]
name = "exp-collision"
version = "0.1.0"
description = ""
authors = ["Steven J. <sjehann@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pytezos = "^3.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
